# lewis_clark_journal_french_translation

./: LICENSE  README.md  lewis_and_clark_journal.epub  lewis_and_clark_journal.md  pyproject.toml  translate.py
