[tool.poetry]
name = "translate"
version = "0.1.0"
description = ""
authors = ["Simon M. <git@simon.marache.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.6.1"
asyncio = "^3.4.3"
pytest = "^7.4.3"
pylint = "^3.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
